# gflownet-tutorials

./: README.md  pyproject.toml  requirements.txt
notebooks/: GFN_Tutorial_1_Smiley_Clean.ipynb  GFN_Tutorial_2_Line_Gaussians_Clean.ipynb
notes/: README.md  lesson-plan.md
src/gfntutorial/: main.py
